--- a/example_code.ipynb
+++ b/example_code.ipynb
@@ -19,7 +19,7 @@
     }
    ],
    "source": [
-    "# 1. read SVG library\n",
+    "# 1. read SVG\n",
     "from defectlib import reader\n",
     "from defectlib import die as d\n"
    ]
