--- a/example_code.ipynb
+++ b/example_code.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# 1. read SVG library\n",
     "from defectlib import reader\n",
-    "from defectlib import die as d\n"
+    "from defectlib import die as d"
    ]
   },
   {
